Update the api
Now api can return value, status and all info of a device
